resolved issues with the satellite page not renedering, resolved issue with the form text not showing up, and added conditionals for creating a new comment

--- a/xplorer1/app/assets/stylesheets/application.css.scss
+++ b/xplorer1/app/assets/stylesheets/application.css.scss
@@ -12,23 +12,11 @@
  *
  *= require_tree .
  *= require_self
-
  */
-
  /* for sign in forms */
-
  @import "normalize";
  @import "satellites";
  @import "comments";
-
- main{
-   background-color: black;
-   color: white;
-   font-size: 35px;
-   text-align: center;
-   font-family: 'Share Tech Mono', monospace;
- }
-
  .border-form-div {
   max-width: 300px;
   padding: 19px 29px 29px;
@@ -54,32 +42,25 @@
   margin-bottom: 15px;
   padding: 7px 9px;
 }
-
+ /* end of css for sign in */
  #map {
      height: 40vw;
      width: 100%;
      left: 0;
-     position: absolute;
      top: 0;
-
  }
-
-
  footer {
-   background-image: url(http://i.imgur.com/pzThpR1.jpg);
-   background-position: center;
-   color: white;
     position: fixed;
     height: 50px;
     bottom: 0;
     width: 100%;
-  //   background-color: #1b1b1b;
-  // background-image: -moz-linear-gradient(top, #222222, #111111);
-  // background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
-  // background-image: -webkit-linear-gradient(top, #222222, #111111);
-  // background-image: -o-linear-gradient(top, #222222, #111111);
-  // background-image: linear-gradient(to bottom, #222222, #111111);
-  // background-repeat: repeat-x;
-  // border-color: #252525;
-  // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+    background-color: #1b1b1b;
+  background-image: -moz-linear-gradient(top, #222222, #111111);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
+  background-image: -webkit-linear-gradient(top, #222222, #111111);
+  background-image: -o-linear-gradient(top, #222222, #111111);
+  background-image: linear-gradient(to bottom, #222222, #111111);
+  background-repeat: repeat-x;
+  border-color: #252525;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
 }
